--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
     <li><a routerLink="/second-component" routerLinkActive="active">Second Component</a></li>
   </ul>
 </nav> -->
-<top-navbar></top-navbar>
-<router-outlet></router-outlet>
+<block-ui>
+  <top-navbar></top-navbar>
+  <router-outlet></router-outlet>
+</block-ui>
+
 
