--- a/src/app/tqc-answer/tqc-answer.component.html
+++ b/src/app/tqc-answer/tqc-answer.component.html
@@ -1,21 +1,81 @@
+<div class="row">
+    <div class="col-12">
 
-<table class="table table-striped table-dark" *ngFor="let item of pageOfItems">
+        <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" [(ngModel)]="chooseCategory.one"
+                (ngModelChange)="ngOnChooseCategoryChanges($event)">
+            第一類
+        </label>
+        <br />
+        <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" [(ngModel)]="chooseCategory.two"
+                (ngModelChange)="ngOnChooseCategoryChanges($event)">
+            第二類
+        </label>
+        <br />
+        <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" [(ngModel)]="chooseCategory.three"
+                (ngModelChange)="ngOnChooseCategoryChanges($event)">
+            第三類
+        </label>
+        <br />
+        <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" [(ngModel)]="chooseCategory.four"
+                (ngModelChange)="ngOnChooseCategoryChanges($event)">
+            第四類
+        </label>
+        <br />
+        <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" [(ngModel)]="chooseCategory.five"
+                (ngModelChange)="ngOnChooseCategoryChanges($event)">
+            第五類
+        </label>
+        <br />
+        <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" [(ngModel)]="chooseCategory.six"
+                (ngModelChange)="ngOnChooseCategoryChanges($event)">
+            第六類
+        </label>
+        <br />
+        <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" [(ngModel)]="chooseCategory.seven"
+                (ngModelChange)="ngOnChooseCategoryChanges($event)">
+            第七類
+        </label>
+        <br />
+        <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" [(ngModel)]="chooseCategory.eight"
+                (ngModelChange)="ngOnChooseCategoryChanges($event)">
+            第八類
+        </label>
+        <br />
+        <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" [(ngModel)]="chooseCategory.all"
+                (ngModelChange)="ngOnChooseCategoryAllChange($event)">
+            全選
+        </label>
+        
+    </div>
+</div>
+
+<table class="table table-dark" *ngFor="let item of pageOfItems">
     <tbody>
-      <tr class="text-center">
-        <td>{{item.TOPIC}}</td>
-      </tr>
-      <tr>
-        <td [ngClass]="{'inputError': isAnswer(item.ANSWER ,'1')}">A:&nbsp;&nbsp;{{item.PROG1}}</td>
-      </tr>
-      <tr>
-        <td [ngClass]="{'inputError': isAnswer(item.ANSWER ,'2')}">B:&nbsp;&nbsp;{{item.PROG2}}</td>
-      </tr>
-      <tr>
-        <td [ngClass]="{'inputError': isAnswer(item.ANSWER ,'3')}">C:&nbsp;&nbsp;{{item.PROG3}}</td>
-      </tr>
-      <tr>
-        <td [ngClass]="{'inputError': isAnswer(item.ANSWER ,'4')}">D:&nbsp;&nbsp;{{item.PROG4}}</td>
-      </tr>
+        <tr class="text-center">
+            <td>{{item.TOPIC}}</td>
+        </tr>
+        <tr>
+            <td [ngClass]="{'inputError': isAnswer(item.ANSWER ,'1')}">A:&nbsp;&nbsp;{{item.PROG1}}</td>
+        </tr>
+        <tr>
+            <td [ngClass]="{'inputError': isAnswer(item.ANSWER ,'2')}">B:&nbsp;&nbsp;{{item.PROG2}}</td>
+        </tr>
+        <tr>
+            <td [ngClass]="{'inputError': isAnswer(item.ANSWER ,'3')}">C:&nbsp;&nbsp;{{item.PROG3}}</td>
+        </tr>
+        <tr>
+            <td [ngClass]="{'inputError': isAnswer(item.ANSWER ,'4')}">D:&nbsp;&nbsp;{{item.PROG4}}</td>
+        </tr>
     </tbody>
 </table>
-<jw-pagination [items]="data" [initialPage]="nowPage" [maxPages]="1" (changePage)="onChangePage($event)"></jw-pagination>
+<jw-pagination [items]="data" [initialPage]="nowPage" [maxPages]="1" (changePage)="onChangePage($event)">
+</jw-pagination>
